--- a/css/styles.css
+++ b/css/styles.css
@@ -45,19 +45,21 @@ main{
     flex-wrap: wrap;
 }
 
-main h1{flex-direction: column;
+main h1{
+    flex-direction: column;
     border-bottom: 2px white solid;
 }
 
 .multimedia{
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 img{
     width: 400px;
     height: auto;
 }
+
 
 .funcionamiento{
     background-color: darkgray;
@@ -66,7 +68,6 @@ img{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
 }
 
 
@@ -107,25 +108,37 @@ img{
     
 }
 
-.contacto{
+.main-contacto{
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.main-contacto h1{
+    margin: 2rem;
+}
+
+.contacto{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .whatsapp{
     background-color: green;
     margin: 3rem 2rem ;
+    border-radius: 10px;
 }
 
 .instagram{
     background-color: purple;
     margin: 3rem 2rem ;
+    border-radius: 10px;
 }
 
 .facebook{
     background-color: blue;
     margin: 3rem 2rem ;
+    border-radius: 10px;
 }
 
 
@@ -163,54 +176,60 @@ footer{
 }
 
 .materiales{
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     flex-wrap: wrap;
     margin: 2rem;
+}
+.materiales p{
+    padding: 0rem 2rem;
 }
 
 .PLA{
     background-color: darkgray;
     border-radius: 10px;
-    margin: 0rem 0rem;
-    
+    margin: 2rem;
+
 }
 
 .PLA img{
     margin: 2rem;
+    border: 3px solid black;
 }
 
 .FLEX{
     background-color: darkgray;
     border-radius: 10px;
-    margin: 1rem 0rem;
+    margin: 2rem;
+
 }
 
 .FLEX img{
     margin: 2rem;
+    border: 3px solid black;
 }
 
 .ABS{
     background-color: darkgrey;
     border-radius: 10px;
-    margin: 1rem 0rem;
+    margin: 2rem;
 }
 
 .ABS img{
     margin: 2rem;
+    border: 3px solid black;
 }
 
 .catalogo-contenedor{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     margin: 1rem;
 }
 
 .veladores{
     margin: 2rem;
     background-color: crimson;
+    border-radius: 10px;
     width: 20rem;
     height: 35rem;
 }
@@ -224,6 +243,7 @@ footer{
 .souvenirs{
     margin: 2rem;
     background-color: darkcyan;
+    border-radius: 10px;
     width: 20rem;
     height: 35rem;
 }
@@ -237,6 +257,7 @@ footer{
 .personalizados{
     margin: 2rem;
     background-color: crimson;
+    border-radius: 10px;
     width: 20rem;
     height: 35rem;
 }
