--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ img {
 .funcionamiento {
   background-color: darkgray;
   border-radius: 10px;
-  margin: 1rem 0rem;
+  margin: 1rem 1rem 1rem 0rem;
 }
 
 .funcionamiento p {
@@ -73,7 +73,7 @@ img {
 .taller {
   background-color: coral;
   border-radius: 10px;
-  margin: 1rem 0rem;
+  margin: 1rem 1rem 1rem 0rem;
 }
 
 .taller p {
@@ -84,7 +84,7 @@ img {
 .datos {
   background-color: darkgray;
   border-radius: 10px;
-  margin: 1rem 0rem;
+  margin: 1rem 1rem 1rem 0rem;
 }
 
 .datos p {
