--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,10 @@ main .multimedia h2 p {
   margin: 2rem;
 }
 
+.sugerencia-txt p{
+  color: white;
+}
+
 
 
 /*# sourceMappingURL=style.css.map */
